--- a/Java/一.数据类型.md
+++ b/Java/一.数据类型.md
@@ -101,7 +101,9 @@
     
   - float赋值时需要在数字后面加上“f”
 
-### 1.4 包装类
+### 1.4 自动装箱和自动拆箱
+
+#### 1.4.1 包装类
 
 - 基本类型与包装类的区别
   - 声明方式：基本类型不使用new关键字；包装类型使用new关键字在堆中分配存储空间
@@ -115,28 +117,88 @@
 >
 > 第二个不会报错。原因是+=会自动进行强制转换，反编译的结果为s1 = (short) ( s1 + 1 );因此不会报错
 
-- 自动拆箱和自动装箱
+#### 1.4.2 自动装箱
 
-  - 装箱 定义：自动将基本数据类型转换成包装类，使用Integer.valueOf()方法，超过范围(-128至+128)则新建对象存储
+- 装箱 定义：自动将基本数据类型转换成包装类，使用Integer.valueOf()方法，超过范围(-128至+128)则新建对象存储
+
+- 原理
+
+  ```java
+  public static Integer valueOf(int i) {
+  	return  i >= 128 || i < -128 ? new Integer(i) : SMALL_VALUES[i + 128];
+  }
+  ```
+
+  <!--实现-->
+
+  ```java
+  // 装箱
+  public class TestAutoBoxing {
+      public static void main(String[] args) {
+          ArrayList<Integer> list = new ArrayList<Integer>();
+          list.add(5); // 等于 list.add(Integer.valueOf(5));
+      }
+  }/* conclusion
+  1.list中的元素为Integer类型
+  2.当使用.add()方法添加时，被添加的类型为基本类型int
+  3.因此将自动变换为 list.add(Integer.valueOf(5))
+  */
+  ```
+
+- 规则
+
+  - 自动装箱规范要求boolean，byte，char小于等于127，介于-128至127之间的short和int被包装到固定的对象中
+
+    原因：IntegerCache.low 默认是-128；IntegerCache.high默认是127，超出范围的将创建对象存储，不然直接返回值。减少new，减轻jvm压力。
 
     ```java
-    public static Integer valueOf(int i) {
-    	return  i >= 128 || i < -128 ? new Integer(i) : SMALL_VALUES[i + 128];
-    }
+    public class TestAutoBoxing {
+        public static void main(String[] args) {
+    				// 使用包装类
+            Integer a = 127;
+            Integer b = 127;
+            Integer c = 128;
+            Integer d = 128;
+            System.out.println("a == b:"+(a == b));
+            System.out.println("c == d:"+(c == d));
+        }
+    }/* output
+    a == b:true
+    c == d:false
+    */
     ```
 
-  - 拆箱 定义：自动将包装类转换成基本数据类型，使用intValue()方法
+  - 由于包装器类引用可以为null，因此会出现NullPointerException
 
-    ```java
-    @Override
-    public int intValue() {
-        return value;
-    }
-    ```
+  - 如果混合使用Integer和Double，Integer会拆箱，提升为double，然后装箱为Double
 
-  - 存储位置
+  - 自动拆箱和自动装箱是编译器认可的，不是虚拟机。
 
-    ![](assets/1.1装箱与拆箱.png)
+#### 1.4.3 自动拆箱
+
+- 拆箱 定义：将包装类数据拆成基本类型数据
+
+  <!--实现-->
+
+  ```java
+  public class TestAutoBoxing {
+      public static void main(String[] args) {
+          // 装箱
+          ArrayList<Integer> list = new ArrayList<Integer>();
+          list.add(5);
+          // 拆箱
+          int intType = list.get(0); // 等于 int intType = list.get(0).intValue();
+      }
+  }/* conclusion
+  1.list中的元素为Integer类型
+  2.当使用.get()方法获取时，获得的值类型为Integer
+  3.因此将自动变换为 int intType = list.get(0).intValue();
+  */
+  ```
+
+- 存储位置
+
+  ![](assets/1.1装箱与拆箱.png)
 
 - 实现
 
