--- a/Java/二.基本语法.md
+++ b/Java/二.基本语法.md
@@ -213,19 +213,22 @@
   - 大于、小于、大于等于、小于等于、等于(==)、不等于(!=)
   - 等于和不等于适用所有基本数据类型，其他比较符不使用boolean类型
 
-- 注意：**equals和等号的区别——面试题**
+- equals和等号的区别——面试题
 
   - 等号（==）
 
     - 基本数据类型（也称原始数据类型） ：byte,short,char,int,long,float,double,boolean。他们之间的比较，应用双等号（==）,比较的是他们的值。
     - 引用数据类型：当他们用（==）进行比较的时候，比较的是他们在内存中的存放地址（确切的说，是**堆内存**地址）
+- equals
+  
+  - 方法的初始默认行为是比较对象的内存地址值
+    - 在一些类库当中这个方法被重写了，如String、Integer、Date，比较对象的成员变量值是否相等
+  
+- equals方法重写后，需要重写hashCode方法——面试题
 
-  - equals
+  原因：以比较对象的成员变量值是否相等为目的而重写equals方法后，为保证符合规则“2个对象equals，那么 hashCode一定相同规则”
 
-    - 方法的初始默认行为是比较对象的内存地址值
-    - 在一些类库当中这个方法被重写了，如String、Integer、Date，比较对象的成员变量值是否相同
-
-    > default:equals方法重写后，需要重写hash方法
+   <!--比如：Test类对象有2个字段，num和data，这2个字段代表了对象的状态，他们也用在equals方法中作为评判的依据。那么， 在hashCode方法中，这2个字段也要参与hash值的运算，作为hash运算的中间参数-->
 
 ### 1.6 逻辑操作符
 
@@ -402,6 +405,7 @@ x,y,z3
 - 规则
   - Java允许将任何基本数据类型转换成别的基本数据类型，但布尔类型不允许任何转换
   - “类”数据类型不允许类型转换，除非使用特殊方法
+  - 强制类型转换时，使用instanceof方法判断是否为所属类型
 
 #### 1.13.1 截尾和舍入
 
